// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Custom Class Names and Styling 1`] = `
<div
  class="Grid--grid- Grid--gridVSpace1- customClassName"
  style="width: 60%; background-color: purple;"
>
  <div
    class="Grid--gridSpan-"
  >
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
  </div>
</div>
`;

exports[`Grid Grid Position Center 1`] = `
<div
  class="Grid--grid- Grid--gridHSpace1- Grid--gridVSpace1- Grid--gridPositionCenter-"
>
  <div
    class="Grid--gridSpan-"
  >
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
  </div>
</div>
`;

exports[`Grid Grid Position Right 1`] = `
<div
  class="Grid--grid- Grid--gridHSpace1- Grid--gridVSpace1- Grid--gridPositionRight-"
>
  <div
    class="Grid--gridSpan-"
  >
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
  </div>
</div>
`;

exports[`Grid Renders Children 1`] = `
<div
  class="Grid--grid- Grid--gridHSpace1- Grid--gridVSpace1-"
>
  <div
    class="Grid--gridSpan-"
  >
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
  </div>
</div>
`;

exports[`Grid Renders Children with custom layout data 1`] = `
<div
  class="Grid--grid- Grid--gridHSpace1- Grid--gridVSpace1-"
>
  <div
    class="Grid--gridSpan-"
  >
    <div
      data-layout="[object Object]"
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
  </div>
  <div
    class="Grid--gridSpan-"
  >
    <div
      data-layout="[object Object]"
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
  </div>
</div>
`;
